add all option into widget options

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
  {
   "name": "bluethink/module-bestseller",
   "description": "Product rendering using widget.",
+  "authors": [
+    {
+        "name": "Ritik",
+        "email": "ritikbluethink0@gmail.com"
+    }
+    ],
   "require": {
-       "php": "7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0|~7.4.0",
+       "php": "7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0|~7.4.0|~8.1.0",
    "magento/magento-composer-installer": "*"
   },
   "type": "magento2-module",
